Revision history for Pod-To-PDF

{{$NEXT}}
    - Make use of Cairo v1.18.0 tagged PDF forward references
    - Avoid Artifact tags, for now.
    - Disable tagging for Cairo < v0.18.2

0.1.9  2025-05-22T08:14:13+12:00
    - Create internal PageFootNote class
    - Add --compress option. This requires installation of the optional
      Compress::PDF Raku module.

0.1.8  2025-05-18T08:00:51+12:00
    - Fix footnote numbering, following forced page-break
    - Add implicit list ('L') tags around series of list
      items (tagged 'LI') for tagged-PDF conformance.

0.1.7  2025-05-15T16:43:04+12:00
    - Add page-style option. Requires installation of
      the CSS::Properties module.
    - Fix page-breaking issues related to footnotes.
    - Fix styling of page-numbers
    - Add margin-(left|right|top|bottom) settings

0.1.6  2023-08-04T07:45:18+12:00
    - rework optional loading of PDF::Tags::Reader in test suite
    - use new FontConfig::Pattern class, introduced in FontConfig v0.1.3+
    - tweak font caching to work on file files, not FontConfig patterns

0.1.5  2022-11-21T07:54:05+13:00
    - Increase line-height. Better match
      Pod::To::PDF::Lite

0.1.4  2022-11-14T08:09:46+13:00
    - Fix text flow on last line of a page.

0.1.3  2022-11-11T06:56:46+13:00
    - Fix bug in table page-breaking

0.1.2  2022-11-10T05:43:21+13:00
    - Fix tests

0.1.1  2022-11-09T15:09:40+13:00
    - Add command-line options handling.
    - Add page numbering option: --page-numbers

0.1.0  2022-09-22T07:34:57+12:00
    - Give footnotes their own tag; for conformance with PDF/UA best
      practices

0.0.18  2022-03-23T07:41:42+13:00
    - Improved handling of page-breaks in code blocks
    - Moved repo to github pod-to-pdf organization.

0.0.17  2022-03-22T15:35:51+13:00
    - Page break on =TITLE
    - Fix code font-sizing. e.g. to fix appearance of:
      =head1 Large header with C<code>
    - Adjust link bounding boxes

0.0.16  2022-03-21T14:07:28+13:00