@@ -3,7 +3,10 @@ Revision history for Pod-To-PDF
 {{$NEXT}}
     - Make use of Cairo v1.18.0 tagged PDF forward references
     - Avoid Artifact tags, for now.
-    - Disable tagging for Cairo < v0.18.2
+    - Checks for unresolved internal references, E.g. L<#Contents>
+      where there's no such section. This can cause be fatal in some
+      versions of Cairo.
+    - Disable tagging for Cairo < v0.18.0
 
 0.1.9  2025-05-22T08:14:13+12:00
     - Create internal PageFootNote class
